--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,14 @@
     "outDir": "./dist",
 
     /* Environment Settings */
-    "module": "commonjs",
+    "module": "ES2020",
     "target": "ES2020",
     "lib": ["ES2020"],
+	"declaration": true,
     "types": ["node", "jest"],
+	"esModuleInterop": true,
+	"moduleResolution": "node",
+	"skipDefaultLibCheck": true,
 
     /* Other Outputs */
     "sourceMap": true,
