--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "typescript_data_structures",
   "version": "1.0.0",
-  "description": "",
+  "description": "This repository provides a collection of reusable and well-tested data structures implemented in TypeScript. The goal of this project is to offer clean, generic, and easy-to-use implementations for learning and practical use.",
   "license": "MIT",
   "main": "index.js",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+	"build": "tsc"
   },
   "repository": {
     "type": "git",
