--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescript_data_structures",
+  "name": "danial-ts-containers",
   "version": "1.0.0",
   "description": "This repository provides a collection of reusable and well-tested data structures implemented in TypeScript. The goal of this project is to offer clean, generic, and easy-to-use implementations for learning and practical use.",
   "license": "MIT",
